--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Camera Permission -->
+    <uses-permission android:name="android.permission.CAMERA"/>
+
     <application
         android:label="Viva Attendance"
         android:name="${applicationName}"
