--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   flutter_screenutil: ^5.9.3
   flutter_keyboard_visibility: ^6.0.0
   package_info_plus: ^8.3.0
+  google_mlkit_face_detection: ^0.13.1
+  camera: ^0.11.2
+  permission_handler: ^12.0.1
 
 dev_dependencies:
   flutter_test:
