--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   equatable: ^2.0.7
   hydrated_bloc: ^10.0.0
   dartz: ^0.10.1
+  face_verification: 0.0.7
   shared_preferences: ^2.5.2
   path_provider: ^2.1.5
   flutter_screenutil: ^5.9.3
@@ -50,6 +51,7 @@ dependencies:
   google_mlkit_face_detection: ^0.13.1
   camera: ^0.11.2
   permission_handler: ^12.0.1
+  image: ^4.2.0
 
 dev_dependencies:
   flutter_test:
