--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   camera: ^0.11.2
   permission_handler: ^12.0.1
   image: ^4.2.0
+  geocoding: ^4.0.0
+  geolocator: ^14.0.2
+  device_info_plus: ^10.1.0
 
 dev_dependencies:
   flutter_test:
