background task init

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   geocoding: ^4.0.0
   geolocator: ^14.0.2
   device_info_plus: ^10.1.0
+  sqflite: ^2.4.1
   flutter_launcher_icons: ^0.14.4
 
 flutter_icons:
