--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.3+3
+version: 1.0.4+4
 
 environment:
   sdk: ^3.7.2
@@ -60,6 +60,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   open_file: ^3.5.10
   location_picker_flutter_map: ^4.1.0
+  connectivity_plus: ^7.0.0
 
 flutter_icons:
   android: true
